--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name" tools:ignore="MissingTranslation">Android-Simple-Bus</string>
+    <string name="app_name" tools:ignore="MissingTranslation">Android-LiveData-Ex</string>
 </resources>
